--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <!-- home banner section================================================ -->
     <div class="home-banner flex-center-col wd-page">
         <div class="header-text-container">
-            <h1><strong>S</strong>aturian</h1>
-            <h1><strong>G</strong>lobal</h1>
+            <h1 class="cursive">Saturian</h1>
+            <h1 class="cursive2">Global</h1>
         </div>
         <div class="lower-text-container">
             <h3>Let's Take a Step to Connect With Digital World</h3>
