--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     <!-- home banner section================================================ -->
     <div class="home-banner flex-center-col wd-page">
         <div class="header-text-container">
-            <h1 class="c">Saturian</h1>
-            <h1 class="c">Global</h1>
+            <img src="/static/media/header.png" class="saturian-intro-img" alt="">
         </div>
         <div class="lower-text-container">
             <h3>Let's Take a Step to Connect With Digital World</h3>
