--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="logo-part">
             <a href="index.html">
                 <img src="/static/media/saturian.png" alt="saturian logo" />
-                <h1>Saturian Global</h1>
+                <h1>Saturian IT Solutions</h1>
             </a>
         </div>
         <ul id="navbar" class="navbar">
