--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                             <lord-icon src="https://cdn.lordicon.com/ygvjgdmk.json" trigger="hover"
                                 colors="primary:#FFD700" style="width:25px;height:25px">
                             </lord-icon>
-                            <p class="mpt-5">More With Saturian Global</p>
+                            <p class="mpt-5">More With Saturian IT Solutions</p>
                         </a></li>
                 </ul>
             </div>
@@ -421,7 +421,7 @@
             </div>
             <!-- copyright section ----------------------->
             <div class="copyright flex-center wd-page">
-                <h1 class="mpt-5">Copyright @2023 SATURIAN GLOBAL</h1>
+                <h1 class="mpt-5">Copyright @2023 SATURIAN IT SOLUTIONS</h1>
             </div>
         </div>
     </footer>
